Fixed <Select> Dropdown DarkTheme For Windows
Fixed issue where the background of the dropdown would not be styled
resulting in an unreadable selection

--- a/src/InitializeStyles.module.scss
+++ b/src/InitializeStyles.module.scss
@@ -13,6 +13,27 @@ body {
   
 }
 
+//https://stackoverflow.com/a/56560979
+select::-ms-expand {
+  display: none;
+}
+select {
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 0.5em 2em 0.5em 0.5em;
+  border: 1px solid #eee;
+  font: inherit;
+  line-height: inherit;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(45deg, transparent 50%, currentColor 50%), linear-gradient(135deg, currentColor 50%, transparent 50%);
+  background-position: right 15px top 1em, right 10px top 1em;
+  background-size: 5px 5px, 5px 5px;
+}
+
 /* https://gist.github.com/spemer/a0e218bbb45433bd611e68446523a00b
 /* total width */
 .appContainer ::-webkit-scrollbar {
